:lipstick: Layout issue

--- a/src/components/ProfileCard/ProfileCard.module.css
+++ b/src/components/ProfileCard/ProfileCard.module.css
@@ -2,7 +2,12 @@
     background: #1d2030;
     border-radius: 10px;
     padding: 20px;
+    width: -webkit-max-content;
     width: max-content;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 .card__symbolContainer {
     background: rgba(113, 113, 120, 0.2);
